	* Documentation:  The NuttX documentation now expects to find an
	  auto-generated version of the configuration variable documentation
	  at Documentation/NuttXConfigVariables.html (2014-4-22).
	* arch/arm/src/lpc17xx/lpc17_adc.c:  Only one ADC pin was configured.
	  Need to configure all that are in the ADC0 set.  From MKannan
	  (2014-4-23).
	* configs/zkit-arm-1769/src:  ADC and SPI/USB MSC updates from
	  MKannan (2014-4-23).
	* arm/src/armv7-m/ram_vectors.h and arm/src/armv7-m/up_ramvec_initialize.c:
	  Fixes to RAM vector logic from Paul Y. Zhang (2014-4-23)
	* tools/kconfig2html.c:  Improve behavior of Expand/Collapse
	  Table of Contents; Handle errors in parsing of strings and in
	  some uninitialized variables.  Add an option to use jQuery.
	* tools/mkconfigvar.sh: Fix make target (2014-4-23).
	* sched/exit.c, pthread_exit.c, task_exit.c, task_delete,c and
	  task_exithook.c:  For pthread_exit(), move some logic to an early
	  point in the exit sequence where the task may need to block.  Add
	  conditional logic in the lower end of the eixt logic kicked off by
	  _exit() to prohibit blocking after the task has been torn down and is
	  no longer cabable of blocking (2014-4-23).
	* arch/arm/src/common/up_initialize.c: Add missing registration
	  of /dev/zero.  Registration of /dev/null should depend upon
	  conditional compilation.  From Ken Pettit (2014-4-24).
	* arch/*/src/common/up_initialize.c:  Same change required to other
	  architectures (2014-4-24).
	* arch/arm/src/kl/kl_clockconfig.c and configs/freedom-kl25z/include/board.h:
	  Modify out PLL configuration so that it uses the values in
	  board.h;  Fix PLL settings in board.h so that the correct core
	  and bus clock frequencies are generated. (2014-4-24).
	* arm/src/kl/chip/kl_memorymap.h, kl_sim.h, andkl_uart.h:  Correct some
	  register definitions (2014-4-25).
	* arch/arm/src/kl/Kconfig, kl_lowputc.c, kl_serial.c, and kl_config.h:
	  No UART3-5 (2014-4-25).