@@ -336,72 +336,3 @@ void up_maskack_irq(int irq)
   up_disable_irq(irq);
   kl_clrpend(irq);
 }
-
-/****************************************************************************
- * Name: up_prioritize_irq
- *
- * Description:
- *   Set the priority of an IRQ.
- *
- *   Since this API is not supported on all architectures, it should be
- *   avoided in common implementations where possible.
- *
- ****************************************************************************/
-
-#ifdef CONFIG_ARCH_IRQPRIO
-int up_prioritize_irq(int irq, int priority)
-{
-  uint32_t regaddr;
-  uint32_t regval;
-  int shift;
-
-  DEBUGASSERT(irq == KL_IRQ_SVCALL ||
-              irq == KL_IRQ_PENDSV ||
-              irq == KL_IRQ_SYSTICK ||
-             (irq >= KL_IRQ_EXTINT && irq < NR_IRQS));
-  DEBUGASSERT(priority >= NVIC_SYSH_PRIORITY_MAX &&
-              priority <= NVIC_SYSH_PRIORITY_MIN);
-
-  /* Check for external interrupt */
-
-  if (irq >= KL_IRQ_EXTINT && irq < (KL_IRQ_EXTINT + 32))
-    {
-      /* ARMV6M_NVIC_IPR() maps register IPR0-IPR7 with four settings per
-       * register.
-       */
-
-      regaddr = ARMV6M_NVIC_IPR(irq >> 2);
-      shift   = (irq & 3) << 3;
-    }
-
-  /* Handle processor exceptions.  Only SVCall, PendSV, and SysTick can be
-   * reprioritized.  And we will not permit modification of SVCall through
-   * this function.
-   */
-
-  else if (irq == KL_IRQ_PENDSV)
-    {
-      regaddr = ARMV6M_SYSCON_SHPR2;
-      shift   = SYSCON_SHPR3_PRI_14_SHIFT;
-    }
-  else if (irq == KL_IRQ_SYSTICK)
-    {
-      regaddr = ARMV6M_SYSCON_SHPR2;
-      shift   = SYSCON_SHPR3_PRI_15_SHIFT;
-    }
-  else
-    {
-      return ERROR;
-    }
-
-  /* Set the priority */
-
-  regval  = getreg32(regaddr);
-  regval &= ~((uint32_t)0xff << shift);
-  regval |= ((uint32_t)priority << shift);
-  putreg32(regval, regaddr);
-
-  kl_dumpnvic("prioritize", irq);
-  return OK;
-}
-#endif
