@@ -38,26 +38,8 @@ CONFIG_RAW_BINARY=y
 #
 # Debug Options
 #
-CONFIG_DEBUG=y
+# CONFIG_DEBUG is not set
 # CONFIG_DEBUG_VERBOSE is not set
-
-#
-# Subsystem Debug Options
-#
-# CONFIG_DEBUG_MM is not set
-CONFIG_DEBUG_SCHED=y
-# CONFIG_DEBUG_FS is not set
-# CONFIG_DEBUG_LIB is not set
-# CONFIG_DEBUG_BINFMT is not set
-# CONFIG_DEBUG_GRAPHICS is not set
-
-#
-# Driver Debug Options
-#
-# CONFIG_DEBUG_LEDS is not set
-# CONFIG_DEBUG_ANALOG is not set
-# CONFIG_DEBUG_GPIO is not set
-# CONFIG_DEBUG_SYMBOLS is not set
 
 #
 # System Type
@@ -235,7 +217,6 @@ CONFIG_TASK_NAME_SIZE=0
 CONFIG_SCHED_HAVE_PARENT=y
 CONFIG_SCHED_CHILD_STATUS=y
 CONFIG_PREALLOC_CHILDSTATUS=0
-# CONFIG_DEBUG_CHILDSTATUS is not set
 # CONFIG_JULIAN_TIME is not set
 CONFIG_START_YEAR=2013
 CONFIG_START_MONTH=2
